--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   permission_handler: ^11.0.1
   font_awesome_flutter: ^10.7.0
   path: ^1.8.3
+  flutter_image_compress: ^2.1.0
+  path_provider: ^2.1.1
 
 fonts:
   - family: SpaceGrotesk
