--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,52 +9,63 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^14.0.0
+
+  # Navigation
+  go_router: ^17.1.0
+
+  # Networking & backend
   http: ^1.2.0
   supabase_flutter: ^2.5.0
-  url_launcher: ^6.2.0
-  image_picker: ^1.0.7
-  image: ^4.1.7
-  shared_preferences: ^2.2.2
-  cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
+
+  # UI & UX
+  google_fonts: ^8.0.1
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
-  flutter_launcher_icons: ^0.14.4
-  geolocator: ^10.1.0
-  permission_handler: ^11.0.1
+  cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.7.0
-  path: ^1.8.3
+
+  # Media & assets
+  image_picker: ^1.0.7
+  image: ^4.3.0
   flutter_image_compress: ^2.1.0
-  path_provider: ^2.1.1
 
-fonts:
-  - family: SpaceGrotesk
-    fonts:
-      - asset: assets/fonts/SpaceGrotesk-Regular.ttf
-        weight: 400
-      - asset: assets/fonts/SpaceGrotesk-Medium.ttf
-        weight: 500
-      - asset: assets/fonts/SpaceGrotesk-SemiBold.ttf
-        weight: 600
-      - asset: assets/fonts/SpaceGrotesk-Bold.ttf
-        weight: 700
+  # Storage & system
+  shared_preferences: ^2.3.0
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  url_launcher: ^6.3.0
 
-  - family: Inter
-    fonts:
-      - asset: assets/fonts/Inter-Regular.ttf
-        weight: 400
-      - asset: assets/fonts/Inter-Medium.ttf
-        weight: 500
-      - asset: assets/fonts/Inter-SemiBold.ttf
-        weight: 600
+  # Location & permissions
+  geolocator: ^14.0.2
+  permission_handler: ^12.0.1
+
+  # Speech
+  speech_to_text: ^7.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: SpaceGrotesk
+      fonts:
+        - asset: assets/fonts/SpaceGrotesk-VariableFont_wght.ttf
+
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-VariableFont_opsz,wght.ttf
+        - asset: assets/fonts/Inter-Italic-VariableFont_opsz,wght.ttf
+          style: italic
+
+    - family: PlayfairDisplay
+      fonts:
+        - asset: assets/fonts/PlayfairDisplay-VariableFont_wght.ttf
+        - asset: assets/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf
+          style: italic
 
 flutter_icons:
   android: true
